--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
    <head>
       <title>ILITE.US | Inspiring Leaders in Technology and Engineering Portal</title>
+            <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="../js/scripts.js">
-      <link rel="stylesheet" href="../js/modernizr-1.5.min.js">
-      <link rel="stylesheet" href="../js/jquery-1.8.2.min.js">
-            <link rel="stylesheet" href="css/style.css"/>
+      <link rel="stylesheet" href="js/scripts.js">
+      <link rel="stylesheet" href="js/modernizr-1.5.min.js">
+      <link rel="stylesheet" href="css/style.css"/>
+      <script src ="js/api.js" type="text/javascript"></script>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
    </head>
    <body>
+      <script src ="js/render.js" type="text/javascript"></script>
+
       <!-- 
          <div id="nav-container">
              <a href="#top"><i class="fa fa-home fa-2x"></i></a>
@@ -42,25 +45,25 @@
                <div class="dashboard clearfix">
                   <ul class="tiles">
                                       <div class="col1 clearfix">
-                        <li class="tile tile-big tile-5 slideTextLeft" data-page-type="r-page" data-page-name="random-r-page">
+                        <li class="tile tile-big tile-5 slideTextLeft Events" data-page-type="r-page" data-page-name="random-r-page">
                            <div>
-                                 <p><i class="fa fa-calendar"></i> EVENT HERE</p>                           </div>
+                                 <p><i class="fa fa-calendar"></i></p>                           </div>
                            <div>
-                              <p>DESCRIPTION HERE</p>
+                              <p></p>
                            </div>
                         </li>
-                        <li class="tile tile-big tile-6 slideTextLeft" data-page-type="r-page" data-page-name="random-r-page">
+                        <li class="tile tile-big tile-6 slideTextLeft Events" data-page-type="r-page" data-page-name="random-r-page">
                            <div>
-                                 <p><i class="fa fa-calendar"></i> EVENT HERE</p>                           </div>
+                                 <p><i class="fa fa-calendar"></i></p>                           </div>
                            <div>
-                              <p>DESCRIPTION HERE</p>
+                              <p></p>
                            </div>
                         </li>
-   <li class="tile tile-big tile-7 slideTextLeft" data-page-type="s-page" data-page-name="custom-page">
+   <li class="tile tile-big tile-7 slideTextLeft Events" data-page-type="s-page" data-page-name="custom-page">
                                                       <div>
-                                 <p><i class="fa fa-calendar"></i> EVENT HERE</p>                           </div>
+                                 <p><i class="fa fa-calendar"></i></p>                           </div>
                            <div>
-                              <p>DESCRIPTION HERE</p>
+                              <p></p>
                            </div>
                         </li>
                      </div>
